[project]
name = "pisort"
version = "1.0.0"
description = "Utility to sort pictures in chronlogical order"
authors = [
    {name = "Étienne Miret",email = "etienne.miret@ens-lyon.org"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "exifread (>=3.5.1,<4.0.0)",
    "tzlocal (>=5.3.1,<6.0.0)"
]

[tool.poetry]
packages = [
    {include="pisort",from="src"}
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
